feat: 新增SInput输入框组件

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,2 @@
-registry=https://registry.npmjs.org/
-# registry=https://packages.aliyun.com/630cb049f9861067e4e7fefb/npm/npm-registry/
+registry=https://registry.npmmirror.com
 strict-peer-dependencies=false
