--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "eslint-plugin-import": "^2.29.1",
     "father": "^4.4.1",
     "husky": "^8.0.1",
+    "jsdom": "^25.0.1",
     "lint-staged": "^13.0.3",
     "mockdate": "^3.0.5",
     "prettier": "^2.7.1",
